# MiPlus

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  cmake.yml  images.yml  main.yml
containers/: build.Dockerfile  dev.Dockerfile
containers/dev/: Dockerfile
containers/developer/: Dockerfile
spike/asio/chat/: CMakeLists.txt  chat_client.cpp  chat_message.hpp  chat_server.cpp
spike/asio/den/chat/: CMakeLists.txt  tcp-chat-server.cpp
src/: CMakeLists.txt  Server.hh  main.cpp
src/lib/network/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.hh
src/lib/network/base/: Bootstrap.cpp  CMakeLists.txt  Channel.cpp  Channel.hh  EventLoop.cpp  EventLoop.hh
src/lib/network/channel/: CMakeLists.txt  Channel.cpp  Channel.hh  ValidFrameCondition.hh
src/lib/network/error/: CMakeLists.txt  ProtocolError.hh
src/lib/network/packet/: CMakeLists.txt
src/lib/network/packet/handshake/client/: HandshakePacket.hh
src/lib/network/packet/status/client/: PingPacket.hh  RequestPacket.hh
src/lib/network/packet/status/server/: CMakeLists.txt  PongPacket.hh  ResponsePacket.hh
src/lib/network/protocol/: CMakeLists.txt  ConnectionState.cpp  ConnectionState.hh  Protocol.hh  ProtocolFactory.hh
src/lib/network/protocol/handshake/: CMakeLists.txt  HandshakeProtocol.cpp  HandshakeProtocol.hh
src/lib/network/protocol/login/: CMakeLists.txt  LoginProtocol.cpp  LoginProtocol.hh
src/lib/network/protocol/play/: CMakeLists.txt  PlayProtocol.cpp  PlayProtocol.hh
src/lib/network/protocol/status/: CMakeLists.txt  StatusProtocol.cpp  StatusProtocol.hh
src/lib/network/session/: CMakeLists.txt  Session.cpp  Session.hh  SessionRegistry.cpp  SessionRegistry.hh  Session_forwarding.hh
src/lib/network/types/: CMakeLists.txt  ConnectionStateHandler.hh  NetworkTypeHandlerConcepts.hh  RawTypeHandler.hh  VarNumberHandler.hh  VarStringHandler.hh
src/lib/network/types/mocks/: CMakeLists.txt
src/network/: Bootstrap.cpp  CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.hh  Session.cpp  Session.hh  SessionHash.hh  SessionRegistry.cpp  SessionRegistry.hh
src/network/base/: Bootstrap.cpp  Bootstrap.hh  CMakeLists.txt  Channel.cpp  Channel.hh  EventLoop.cpp  EventLoop.hh  MatchConditions.hh
src/network/codec/handshake/: HandshakeCodec.hh
src/network/error/: CMakeLists.txt  ProtocolError.hh
src/network/handler/handshake/: HandshakeHandler.hh
src/network/message/: Message.hh
src/network/message/handshake/: HandshakeMessage.cpp  HandshakeMessage.hh
src/network/packet/: CMakeLists.txt  Packet.hh
src/network/packet/handshake/: HandshakePacket.cpp  HandshakePacket.hh
src/network/packet/handshake/client/: HandshakePacket.cpp  HandshakePacket.hh
src/network/packet/status/client/: PingPacket.cpp  PingPacket.hh  RequestPacket.cpp  RequestPacket.hh
src/network/packet/status/server/: CMakeLists.txt  PongPacket.cpp  PongPacket.hh  ResponsePacket.cpp  ResponsePacket.hh
src/network/protocol/: CMakeLists.txt  ConnectionState.hh  HandshakeProtocol.cpp  HandshakeProtocol.hh  Protocol.cpp  Protocol.hh  ProtocolFactory.hh
src/network/protocol/handshake/: CMakeLists.txt  HandshakeProtocol.cpp  HandshakeProtocol.hh
src/network/protocol/status/: CMakeLists.txt  StatusProtocol.cpp  StatusProtocol.hh
src/network/session/: CMakeLists.txt  Session.cpp  Session.hh  SessionRegistry.cpp  SessionRegistry.hh
src/network/types/: BasicTypes.cpp  BasicTypes.hh  NetworkTypeHandlerConcepts.hh  NetworkTypeHandlers.hh  NetworkTypes.hh  RawTypeHandler.hh  RawTypesHandler.hh  VarInt.cpp  VarInt.hh  VarNumber.cpp  VarNumber.hh  VarNumberHandler.hh  VarNumbersHandler.hh  VarString.cpp  VarString.hh  VarStringHandler.hh
src/network/types/testing/: NetworkTypeHandlerMock.hh  NetworkTypeIteratorReaderMock.hh  VarNumberMock.hh
test/: CMakeLists.txt
test/network/: CMakeLists.txt
test/network/base/: CMakeLists.txt  MatchConditionsTest.cpp  MatchConditionsTest.hh
test/network/channel/: CMakeLists.txt  ValidFrameConditionTest.cpp
test/network/packet/: CMakeLists.txt  HandshakePacketTest.cpp  PacketTest.hh  PingPacketTest.cpp  PongPacketTest.cpp  ResponsePacketTest.cpp
test/network/protocol/: CMakeLists.txt  ConnectionStateTest.cpp  ProtocolFactoryTest.cpp
test/network/types/: BasicTypesTests.cpp  CMakeLists.txt  ConnectionStateTests.cpp  NetworkTypeTest.hh  NetworkTypeTests.hh  RawTypeTests.cpp  RawTypesTests.cpp  VarNumberTests.cpp  VarStringTests.cpp
